# public_package_template

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
tests/: test_module.py  test_nested_module.py
